Fix link toggle visibility using inline styles

--- a/style.css
+++ b/style.css
@@ -583,13 +583,7 @@ h1 {
 
 .shop-link-input,
 .edit-link-input {
-    display: none;
     grid-column: 1 / -1;
-}
-
-.shop-link-input.link-visible,
-.edit-link-input.link-visible {
-    display: block;
 }
 
 .col-item a {
